# llmstart-fullstack-live

./: .dockerignore  .env.example  .env.ghcr.example  .env2  .gitattributes  .gitignore  Makefile  README.md  docker-compose.ghcr.yml  docker-compose.yml  git.txt  pyproject.toml  requirements.txt  run.ps1  stop_bot.ps1  tasks.ps1  twc.txt
.cursor/agents/: docs-updater.md
.cursor/plans/: docs_plan.md_roadmap_aaacfe1d.plan.md  telegram_bot_mvp_a9cbdc21.plan.md
.cursor/rules/: conventions.mdc  workflow.mdc
.github/workflows/: ci.yml  ghcr.yml
backend/: .env.example  FAR1B3A.tmp  FAR516C.tmp  FAR5173.tmp  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py  errors.py
backend/app/api/v1/: router.py  routes_auth.py  routes_cohort.py  routes_dialogues.py  routes_guest.py  schemas_dialogues.py  schemas_frontend.py  schemas_guest.py  schemas_progress.py
backend/app/domain/: models.py
backend/app/infrastructure/: database.py  llm_assistant.py
backend/app/infrastructure/repositories/: __init__.py  cohort_progress_repository.py  dialogue_repository.py  user_repository.py
backend/app/services/: auth_service.py  cohort_analytics_service.py  cohort_service.py  dialogue_service.py  guest_dialogue_service.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial_schema.py  0002_rename_users_display_name_to_name.py  0003_seed_course_progress.py  0004_dialogue_turns.py  0005_frontend_user_checkpoints_progress_fields.py  0006_seed_homework_flags_on_import_checkpoints.py  0007_seed_frontend_demo_cohort.py  6480de72d688_описание.py
backend/tests/: api_fixtures.py  conftest.py  constants.py  test_api.py
backend/tests/pg/: conftest.py  test_api.py
backend/tests/sqlite/: conftest.py  test_api.py
backend/tests/unit/: test_llm_content_normalize.py
bot/: .env.example  README.md  config.py  main.py
bot/handlers/: command_handler.py  message_handler.py
bot/prompts/: system.txt
bot/services/: backend_assistant.py  llm_service.py
bot/state/: pending_dev_username.py
data/: PRORAM.md  README.md  progress-import.v1.json
devops/: README.md
docs/: architecture.md  data-model.md  doc-audit.md  idea.md  integrations.md  onboarding.md  plan.md  prompt.md  vision.md
scripts/: pg-selftest.sql
(+127 files in other folders)
