[project]
name = "llmstart-fullstack-live"
version = "0.1.0"
description = "Telegram-бот для сопровождения учебного потока курса AI-driven fullstack developer"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "aiogram>=3.15.0",
    "openai>=1.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "aiohttp-socks>=0.7.0",
]

[dependency-groups]
dev = ["ruff>=0.8.0"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
