[project]
name = "llmstart-backend"
version = "0.1.0"
description = "Backend API ядра LLMStart"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "psycopg2-binary>=2.9",
    "tzdata>=2025.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py39"
src = ["app", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["UP045"]

[tool.ruff.lint.isort]
known-first-party = ["app", "tests"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
